@@ -1,3 +1,14 @@
+2007-05-17  David Hyatt  <hyatt@apple.com>
+
+        Allow redundant attributes with the same name in view source mode.
+
+        Reviewed by aroben
+
+        * dom/NamedAttrMap.h:
+        (WebCore::NamedAttrMap::insertAttribute):
+        * html/HTMLTokenizer.cpp:
+        (WebCore::Token::addAttribute):
+
 2007-05-17  George Staikos  <staikos@kde.org>
 
         - Back out last patch based on discussion with Zack.
